--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+h1 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    letter-spacing: 5px;
+    color: var(--color-text);
+}
+
 /*CONTAINER ALIGNMENT*/
 .container-element {
     padding-inline: 5vh;
